# dtools-containers

./: CHANGELOG.md  README.md  pyproject.toml
src/dtools/containers/: __init__.py  functional_tuple.py  immutable_list.py  maybe.py  xor.py
src/dtools/containers/boxes/: __init__.py  box.py
src/dtools/containers/ftuples/: __init__.py  hftuple.py  iftuple.py  inherited.py  wrapped.py
src/dtools/containers/tuples/: __init__.py
src/dtools/tuples/: __init__.py  ftuple.py
tests/: test_containers.py  test_functional.py  test_functional_tuple.py  test_immutable_list.py  test_immutable_list_fp.py  test_sequence_maybe.py  test_sequence_xor.py.hold
tests/ftuple/: test_ftuple.py  test_functional.py  test_hftuple.py
tests/ftuples/: test_inherited.py  test_wrapped.py
