[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dtools.queues"
authors = [
    { name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]
dependencies = [
    "dtools.fp >= 1.5.1, < 1.6"
]
dynamic = ["version", "description"]
keywords = [
    "tuple", "functional", "ftuple", "FTuple"
] 

[project.optional-dependencies]
test = [
    "pytest >=8.3.5",
    "dtools.fp >=1.5.1, < 1.6",
    "dtools.queues >=0.26.1, < 0.27"
]

[project.urls]
Source = "https://github.com/grscheller/dtools-tuples"
Changelog = "https://github.com/grscheller/dtools-tuples/blob/main/CHANGELOG.md"
Documentation = "https://grscheller.github.io/dtools-docs/tuples"

[tool.flit.sdist]
exclude = ["dist", "tests", ".gitignore", ".mypy_cache", ".pytest_cache"]

[tool.pylsp-mypy]
enabled = true
live-mode = true
strict = true
report_progress = true

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
implicit_reexport = false
local_partial_types = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
consider_namespace_packages = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
